
  ChangeLog for the eggleton-tools repository.  
  Please log (major) changes here (and add a short comment using bzr commit -m 'Comment').
  
   166: AstroFloyd, 26/10/2011:
     - Updated FindLibSUFR.cmake to default
   
   168: AstroFloyd, 26/10/2011:
     - Updated CMakeLocations.cmake, FindPGPLOT.cmake to default
   
******************************************************************************************
   167: AstroFloyd, 19/10/2011:  *** SF v0.1.2 ***
     - Converted revision numbers from svn to bzr (i.e., bzr# = svn# + 1) in ChangeLog.txt
     - Updated Doxygen comments
     - Updated Doxyfile
     
   166: AstroFloyd, 19/10/2011  (was svn rev.165)
     - Make sure the code compiles with g95 (even if it can't run)
     
   165: AstroFloyd, 19/10/2011
     - plotplt: 
       - t-t_final (var 133): start at 10^3 years iso 10^4 years
       - add companion labels (*1/*2) to legend
     - mdl:
       - BUGFIX: read_first_mdls(): read file if blk.gt.0, not .gt.1
       - add dummy variable blk to read_chosen_mdl()
       
   164: AstroFloyd, 19/10/2011
     - Updated CMake, using options from CMakeFiles
     
   163: AstroFloyd, 08/06/2011
     - plotmdl: added read_chosen_mdl()
     - Added plotmdln_new.f90 to start using mdl_functions
     
   162: AstroFloyd, 08/06/2011
     - plotplt:
       - replace Ebind contribution ratios by their absolute values
       - fix memory allocation when reading different model
       - fix double-axes plotted for logarithmic Kippenhahn plot
       
   161: AstroFloyd, 01/06/2011
     - plotplt: renamed variables 157, 158
     
   160: AstroFloyd, 26/05/2011
     - plotplt: added variables 152-158 for envelope binding energy
     - Added rename_plt2mass to svn
     
   159: AstroFloyd, 27/04/2011
     - Fixed small bug in array allocation when continously updating a plot with plotplt
     
   158: AstroFloyd, 08/04/2011
     - Changed type of lgx,lgy from integer to logical
     
   157: AstroFloyd, 08/04/2011