@@ -1,6 +1,5 @@
 # Compiler flags for Fortran compilers
 
-
 # Get compiler name:
 get_filename_component( Fortran_COMPILER_NAME ${CMAKE_Fortran_COMPILER} NAME )
 
@@ -31,10 +30,11 @@ if( Fortran_COMPILER_NAME MATCHES "gfortran" )
   endif( WANT_STATIC )
   
   if( WANT_CHECKS )
-    set( CHECK_FLAGS "-O0 -fbounds-check -ffpe-trap=zero,invalid -fsignaling-nans -fbacktrace" ) # v.4.4
-    #set( CHECK_FLAGS "-O0 -fcheck=all -ffpe-trap=zero,invalid -fsignaling-nans -fbacktrace" )  # v.4.5
+    set( CHECK_FLAGS "-fbounds-check -ffpe-trap=zero,invalid -fsignaling-nans -fbacktrace" ) # v.4.4
+    #set( CHECK_FLAGS "-fcheck=all -ffpe-trap=zero,invalid -fsignaling-nans -fbacktrace" )  # v.4.5
+    set( OPT_FLAGS "-O0" )
   else( WANT_CHECKS )
-    set( CHECK_FLAGS "-O2" )
+    set( OPT_FLAGS "-O2" )
   endif( WANT_CHECKS )
   
   if( WANT_WARNINGS )
@@ -58,13 +58,15 @@ elseif( Fortran_COMPILER_NAME MATCHES "g95" )
   
   
   set( CMAKE_Fortran_FLAGS "" )
-  set( CMAKE_Fortran_FLAGS_RELEASE "-O2" )
-  set( CMAKE_Fortran_FLAGS_DEBUG "-O0 -g" )
+  set( CMAKE_Fortran_FLAGS_RELEASE "" )
+  set( CMAKE_Fortran_FLAGS_DEBUG "-g" )
   
   if( WANT_CHECKS )
-    set( CHECK_FLAGS "-O0 -fbounds-check -ftrace=full" )
+    set( CHECK_FLAGS "-fbounds-check -ftrace=full" )
+    set( OPT_FLAGS "-O0" )
   else( WANT_CHECKS )
-    set( CHECK_FLAGS "-O2 -fshort-circuit" )
+    set( CHECK_FLAGS "-fshort-circuit" )
+    set( OPT_FLAGS "-O2" )
   endif( WANT_CHECKS )
   
   if( WANT_WARNINGS )
@@ -89,7 +91,7 @@ elseif( Fortran_COMPILER_NAME MATCHES "g95" )
 elseif( Fortran_COMPILER_NAME MATCHES "ifort" )
   
   
-  set( CMAKE_Fortran_FLAGS_ALL "-nogen-interfaces" )
+  set( CMAKE_Fortran_FLAGS_ALL "-nogen-interfaces -mcmodel=medium" )  # -mcmodel exists for Linux only...
   set( CMAKE_Fortran_FLAGS "-vec-guard-write -fpconstant -funroll-loops -align all -ip" )
   set( CMAKE_Fortran_FLAGS_RELEASE "-vec-guard-write -fpconstant -funroll-loops -align all -ip" )
   set( CMAKE_Fortran_FLAGS_DEBUG "-g -traceback" )
@@ -117,13 +119,14 @@ elseif( Fortran_COMPILER_NAME MATCHES "ifort" )
   endif( WANT_STATIC )
   
   if( WANT_CHECKS )
-    set( CHECK_FLAGS "-O0 -ftrapuv -check all -check noarg_temp_created -traceback" )
+    set( CHECK_FLAGS "-ftrapuv -check all -check noarg_temp_created -traceback" )
+    set( OPT_FLAGS "-O0" )
   else( WANT_CHECKS )
-    set( CHECK_FLAGS "-O2" )
+    set( OPT_FLAGS "-O2" )
   endif( WANT_CHECKS )
   
   if( WANT_WARNINGS )
-     #8291: W>=D+7 in esW.D format
+    # 8291: W>=D+7 in esW.D format
     set( WARN_FLAGS "-warn all -stand f03  -diag-disable 8291" )
   endif( WANT_WARNINGS )
   
@@ -143,9 +146,10 @@ else( Fortran_COMPILER_NAME MATCHES "gfortran" )
   message( "CMAKE_Fortran_COMPILER full path: " ${CMAKE_Fortran_COMPILER} )
   message( "Fortran compiler: " ${Fortran_COMPILER_NAME} )
   message( "No optimized Fortran compiler flags are known, we just try -O2..." )
-  set( CMAKE_Fortran_FLAGS "-O2" )
-  set( CMAKE_Fortran_FLAGS_RELEASE "-O2" )
-  set( CMAKE_Fortran_FLAGS_DEBUG "-O0 -g" )
+  set( CMAKE_Fortran_FLAGS "" )
+  set( CMAKE_Fortran_FLAGS_RELEASE "" )
+  set( CMAKE_Fortran_FLAGS_DEBUG "-g" )
+  set( OPT_FLAGS "-O2" )
   
   
   # Package-specific flags:
@@ -163,7 +167,7 @@ endif( Fortran_COMPILER_NAME MATCHES "gfortran" )
 #  Put everything together:
 ######################################################################################################################################################
 
-set( USER_FLAGS "${LIB_FLAGS} ${CHECK_FLAGS} ${WARN_FLAGS} ${SSE_FLAGS} ${IPO_FLAGS} ${OPENMP_FLAGS} ${STATIC_FLAGS} ${INCLUDE_FLAGS} ${PACKAGE_FLAGS}" )
+set( USER_FLAGS "${OPT_FLAGS} ${LIB_FLAGS} ${CHECK_FLAGS} ${WARN_FLAGS} ${SSE_FLAGS} ${IPO_FLAGS} ${OPENMP_FLAGS} ${STATIC_FLAGS} ${INCLUDE_FLAGS} ${PACKAGE_FLAGS}" )
 
 set( CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS_ALL} ${CMAKE_Fortran_FLAGS} ${USER_FLAGS}" )
 set( CMAKE_Fortran_FLAGS_RELEASE "${CMAKE_Fortran_FLAGS_ALL} ${CMAKE_Fortran_FLAGS_RELEASE} ${USER_FLAGS}" )
@@ -177,6 +181,7 @@ set( CMAKE_Fortran_FLAGS_RELWITHDEBINFO "${CMAKE_Fortran_FLAGS_RELEASE} -g" )
 #  Report what's going on:
 ######################################################################################################################################################
 
+message( STATUS "" )
 message( STATUS "Using Fortran compiler: " ${Fortran_COMPILER_NAME} " (" ${CMAKE_Fortran_COMPILER}")" )
 
 if( WANT_CHECKS )
@@ -192,7 +197,9 @@ if( WANT_STATIC )
   message( STATUS "Linking statically:  ${STATIC_FLAGS}" )
 endif( WANT_STATIC )
 
+
 message( STATUS "Compiler flags used:  ${CMAKE_Fortran_FLAGS}" )
+message( STATUS "" )
 
 
 
